--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap");
 
 body {
-  margin: 0px;
+  margin: 0px auto;
   padding: 0px;
   background-color: #282828;
   font-size: 13px;
@@ -18,6 +18,7 @@ header {
   left: 0;
   display: flex;
   justify-content: space-between;
+  z-index: 100;
 }
 
 header .wrap {
@@ -52,4 +53,17 @@ header .wrap .left .menu {
   text-decoration: none;
   color: #999999;
   font-size: 20px;
+}
+
+main img {
+  height: 400px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+main button {
+  background-color: #00755d;
+  margin: 20px;
 }
