--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Nanum+Gothic:wght@400;700;800&display=swap");
 
 body {
   margin: 0px auto;
@@ -49,6 +49,10 @@ header .wrap .left .search input {
   font-family: "EB Garamond", serif;
 }
 
+header .wrap .left .search input::placeholder {
+  padding-left: 10px;
+}
+
 header .wrap .left .menu {
   text-decoration: none;
   color: #999999;
@@ -82,6 +86,41 @@ main .watch {
 
 main h5 {
   position: absolute;
-  top: 5px;
-  left: 5px;
+  top: -130px;
+  left: -85px;
+  color: #e9e9e9;
+  font-size: 25px;
+}
+
+main h5:hover {
+  color: #ffffff;
+}
+
+main p {
+  position: absolute;
+  top: -90px;
+  left: -85px;
+  color: #d1d1d1;
+  font-size: 15px;
+  font-family: "Nanum Gothic", sans-serif;
+}
+
+main p:hover {
+  color: #ffffff;
+}
+
+main h5 main .id {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+main .id iframe {
+  width: 90%;
+  height: 100%;
+  position: absolute;
+  overflow: hidden;
+  border: none;
+  top: 520px;
+  left: 100px;
 }
