--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body {
   margin: 0px auto;
   padding: 0px;
-  background-color: #282828;
+  background-color: #1d1d1d;
   font-size: 13px;
   color: #676767;
   font-family: "EB Garamond", serif;
@@ -90,6 +90,7 @@ main h5 {
   left: -85px;
   color: #e9e9e9;
   font-size: 25px;
+  margin: 0px auto;
 }
 
 main h5:hover {
@@ -103,6 +104,7 @@ main p {
   color: #d1d1d1;
   font-size: 15px;
   font-family: "Nanum Gothic", sans-serif;
+  margin: 0px auto;
 }
 
 main p:hover {
@@ -123,4 +125,55 @@ main .id iframe {
   border: none;
   top: 520px;
   left: 100px;
+}
+
+main .continue-watch {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #000000;
+  background-color: #009c7c;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  position: absolute;
+  top: 800px;
+  left: 115px;
+}
+
+main .continue-watch .fa-film {
+  font-size: 20px;
+}
+
+main .text p {
+  font-size: 20px;
+  position: absolute;
+  top: -10px;
+  left: 50px;
+  color: #ffffff;
+  margin: 0px auto;
+}
+
+main .quantity p {
+  font-size: 16px;
+  position: absolute;
+  top: -0px;
+  left: 160px;
+  color: #676767;
+  margin: 0px auto;
+}
+
+main .quantity p:hover {
+  color: #00755d;
+}
+
+main .list {
+  position: absolute;
+  top: 750px;
+  left: 115px;
+}
+
+main .list img {
+  width: 300px;
+  height: 500px;
 }
