--- a/style.css
+++ b/style.css
@@ -172,24 +172,59 @@ main .list {
   width: 100%;
   height: auto;
   position: absolute;
-  top: 900px;
-  left: 115px;
+  top: 800px;
+  left: -10px;
   margin: 0px;
 }
 
 main .list .Movie {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 43px;
+  padding: 130px;
 }
 
-main .list .movieI {
+main .list img {
   width: 317px;
   height: 178px;
   margin: 0px;
 }
 
-main .list .movieII {
-  width: 317px;
-  height: 178px;
-  margin: 0px;
+main .list img .overley {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+main .list .Movie .info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 310px;
+  left: 133px;
+  font-family: "Nanum Gothic", sans-serif;
+}
+
+main .list .Movie .info a {
+  text-decoration: none;
+}
+
+main .list .Movie .info .movie-title-geo {
+  color: #d1d1d1;
+  font-size: 20px;
+}
+
+main .list .Movie .info .movie-title-orig {
+  color: #676767;
+  font-size: 15px;
+}
+
+main .list .Movie .info .movie-title-orig:hover {
+  color: #009c7c;
+}
+
+main .list .Movie .info .movie-title-geo:hover {
+  color: #009c7c;
 }
