--- a/style.css
+++ b/style.css
@@ -9,6 +9,28 @@ body {
   font-family: "EB Garamond", serif;
 }
 
+*::-webkit-scrollbar-track {
+  box-shadow: transparent;
+  background-color: transparent;
+}
+
+*::-webkit-scrollbar {
+  width: 10px;
+  background-color: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #00755d;
+  background-image: -webkit-linear-gradient(
+    90deg,
+    transparent,
+    rgba(0, 0, 0, 0.4) 50%,
+    transparent,
+    transparent
+  );
+}
+
 header {
   width: 100%;
   height: 80px;
@@ -46,6 +68,7 @@ header .wrap .left .search input {
   height: 30px;
   font-size: 18px;
   margin: -6px;
+  color: #009c7c;
   font-family: "EB Garamond", serif;
 }
 
@@ -58,7 +81,11 @@ header .wrap .left .menu {
   color: #999999;
   font-size: 20px;
 }
-
+main .carusel {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 main img {
   height: 487px;
   object-fit: contain;
@@ -183,7 +210,7 @@ main .list .Movie {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 43px;
+  flex-wrap: wrap;
   padding: 130px;
 }
 
@@ -207,9 +234,9 @@ main .list .Movie .info {
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
+  /* position: absolute;
   top: 310px;
-  left: 133px;
+  left: 133px; */
   font-family: "Nanum Gothic", sans-serif;
 }
 
