--- a/style.css
+++ b/style.css
@@ -33,41 +33,28 @@ body {
 
 header {
   width: 100%;
-  height: 80px;
+  height: 50px;
   background-color: #282828;
-  position: fixed;
-  top: 0;
-  left: 0;
-  display: flex;
-  justify-content: space-between;
   z-index: 100;
 }
 
-header .wrap {
-  width: 85%;
-  height: 75%;
+header .logo img {
+  height: 30px;
+}
+
+header .left {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  margin: 0px auto;
-}
-
-header .wrap .left {
-  display: flex;
-  align-items: center;
-}
-
-header .wrap .left .image img {
-  height: 28px;
-  width: 140px;
+  grid-template-columns: repeat(6, 1fr);
+  grid-column-gap: 20px;
+  padding: 10px 30px;
+  width: 100%;
 }
 
 header .wrap .left .search input {
   background-color: #3c3c3c;
   border: 2px solid #404040;
   width: 660px;
-  height: 30px;
   font-size: 18px;
-  margin: -6px;
   color: #009c7c;
   font-family: "EB Garamond", serif;
 }
@@ -76,11 +63,43 @@ header .wrap .left .search input::placeholder {
   padding-left: 10px;
 }
 
-header .wrap .left .menu {
+header .wrap .left .fa-bars {
+  color: #009c7c;
+  font-size: 15px;
+}
+
+header .wrap .left .fa-bars a {
   text-decoration: none;
-  color: #999999;
+}
+
+header .wrap .left .notefi {
+  border-radius: 50px;
+  background-color: #009c7c;
+  height: 20px;
+  width: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+header .wrap .left .fa-bell {
+  color: #ffffff;
+  font-size: 10px;
+}
+
+header .wrap .left .fa-bell a {
+  text-decoration: none;
+}
+
+header .wrap .left .fa-user-circle {
+  color: #009c7c;
   font-size: 20px;
 }
+
+header .wrap .left .fa-user-circle a {
+  text-decoration: none;
+}
+
 main .carusel {
   display: flex;
   justify-content: center;
@@ -207,11 +226,10 @@ main .list {
 main .list .Movie {
   width: 100%;
   height: auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
-  padding: 130px;
+  position: absolute;
+  top: -50px;
+  left: 7px;
+  padding: 150px;
 }
 
 main .list img {
@@ -222,12 +240,6 @@ main .list img {
 
 main .list img .overley {
   background-color: rgba(0, 0, 0, 0.5);
-}
-
-main .list .Movie .movie-name {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
 }
 
 main .list .Movie .info {
