--- a/style.css
+++ b/style.css
@@ -181,3 +181,44 @@ a {
   outline: none;
   cursor: pointer;
 }
+
+/* slider */
+
+#main-slider {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px auto;
+  max-width: 1170px;
+  width: 100%;
+}
+
+.main-slider-box {
+  width: 300px;
+  height: 450px;
+  box-shadow: 2px 2px 10px #1d1d1d1a;
+  border: 1px solid #0e0e0ec2;
+  background-color: #7a7a7a;
+  position: relative;
+}
+
+.main-slider-img {
+  width: 100%;
+  height: 100%;
+}
+
+.main-slider-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.main-slider-text {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(360deg, #161616b9 35%, #1d1d1d3b 64%);
+}
