--- a/style.css
+++ b/style.css
@@ -27,6 +27,17 @@ a {
   color: #1d1d1d;
 }
 
+/* hide-default-scroll-bar */
+
+body::-webkit-scrollbar {
+  display: none;
+}
+
+body {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
 /* navigation */
 
 .navigation {
@@ -43,7 +54,7 @@ a {
   cursor: pointer;
   float: right;
   padding: 20px 10px;
-  z-index: 103;
+  z-index: 107;
 }
 
 .navigation .menu-icon .nav-icon {
@@ -105,7 +116,7 @@ a {
   width: 100%;
   height: 100%;
   background-color: #111111f1;
-  z-index: 102;
+  z-index: 106;
   display: none;
   justify-content: center;
   align-items: center;
@@ -230,7 +241,7 @@ a {
 }
 
 .main-slider-text .quality {
-  background-color: #00755d;
+  background-color: #009c7c;
   color: #1d1d1d;
   font-weight: 600;
   padding: 0px 5px;
@@ -272,7 +283,7 @@ a {
 }
 
 .main-slider-text .category a {
-  color: #00755d;
+  color: #009c7c;
   margin: 0px 3px;
 }
 
@@ -395,4 +406,92 @@ a {
 .main-slider-text .movie-name a:hover {
   opacity: 0.5;
   transition: all ease 0.3s;
+}
+
+/* page number */
+
+.page-number {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #009c7c;
+  margin-top: 50px;
+}
+
+.page-number a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #009c7c;
+  margin: 0px 13px;
+  opacity: 0.5;
+  transition: all ease 0.3s;
+}
+
+.page-number .page-active,
+.page-number a:hover {
+  opacity: 1;
+  transition: all ease 0.3s;
+}
+
+/* footer */
+
+footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 10%;
+}
+
+footer .text {
+  color: #00755d;
+  font-size: 1rem;
+}
+
+footer .logo {
+  margin: 0px;
+  font-size: 2rem;
+  font-weight: 400;
+}
+
+/* fix-menu-btn */
+
+.fix-icon .menu-icon {
+  position: fixed;
+  left: 40px;
+  top: 40px;
+  background-color: #00755e5c;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* progress-bar */
+
+#progress {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  position: fixed;
+  bottom: 25px;
+  right: 25px;
+  box-shadow: 0px 0px 10px #00000033;
+  display: grid;
+  place-items: center;
+  z-index: 105;
+}
+
+#progress-value {
+  display: block;
+  height: calc(100% - 5px);
+  width: calc(100% - 5px);
+  background-color: #1c1f25;
+  border-radius: 50%;
+  display: flex;
+  place-items: center;
+  font-weight: 600;
+  font-size: 0px;
 }
