--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ body {
 }
 
 .main-slider-box {
-  width: 100%px;
+  width: 100%;
   height: 450px;
   box-shadow: 2px 2px 10px #0000001a;
   border: 1px solid #0e0e0ec2;
@@ -517,12 +517,8 @@ footer .logo {
   left: 0px;
   width: 100%;
   height: 100%;
-  background: rgba(49, 49, 49, 0.7);
-  background: linear-gradient(
-    0deg,
-    rgb(0, 0, 0, 0.5) 0%,
-    rgba(0, 0, 0, 0.4) 100%
-  );
+  background: #313131b3;
+  background: linear-gradient(0deg, #00000080 0%, #00000066 100%);
 }
 
 .m-banner-img {
@@ -542,12 +538,8 @@ footer .logo {
   left: 0px;
   width: 100%;
   height: 100%;
-  background: rgba(39, 39, 39, 0.7);
-  background: linear-gradient(
-    -90deg,
-    rgba(40 40, 40, 0.2) 0%,
-    rgba(22, 22, 22, 0.3) 100%
-  );
+  background: #272727b3;
+  background: linear-gradient(-90deg, rgba(40 40, 40, 0.2) 0%, #1616164d 100%);
 }
 
 .m-banner-img img {
@@ -614,4 +606,138 @@ footer .logo {
   justify-content: flex-start;
   align-items: flex-end;
   flex-wrap: wrap;
+}
+
+.title-bottom .category {
+  margin-right: 40px;
+  font-size: 0.8rem;
+  color: #d8d8d8;
+}
+
+.title-bottom .category a {
+  color: #009c7c;
+  margin-right: 5px;
+}
+
+.title-bottom .category strong {
+  font-weight: 500;
+  color: #ffffff;
+}
+
+.watch-btn {
+  width: 220px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #ffffff09;
+  border: 1px solid #ffffff2c;
+  border-radius: 3px;
+  text-transform: uppercase;
+  font-size: 0.9rem;
+  color: #ffffff;
+  letter-spacing: 1px;
+  transition: all ease 0.3s;
+}
+
+.watch-btn:hover {
+  background-color: #009c7c;
+  transition: all ease 0.3s;
+}
+
+/* play-btn */
+
+.play-btn {
+  width: 65px;
+  height: 65px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  border: 1px solid #dadada48;
+  z-index: 3;
+  background-color: rgba(0, 255, 0, 0.185);
+  position: relative;
+}
+.play-btn a {
+  width: 65px;
+  height: 65px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  transition: all ease 0.3s;
+}
+.play-btn a:hover {
+  background-color: #009c7c;
+  transition: all ease 0.3s;
+}
+
+.play-btn i {
+  color: #ffffff;
+}
+
+.play-btn-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  width: 100%;
+  max-width: 500px;
+}
+
+.play-btn::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  width: 180%;
+  height: 180%;
+  border: 1px solid #ffffff28;
+  background-color: #ffffff18;
+  z-index: -1;
+}
+
+/* full-movie-video */
+
+#play {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(15, 15, 15, 0.7);
+  z-index: 108;
+  display: none;
+}
+.play-movie {
+  width: 80%;
+}
+.play-movie video,
+.play-movie iframe {
+  width: 100%;
+  height: 100%;
+  object-position: center;
+  object-fit: cover;
+  z-index: 108;
+}
+.close-movie {
+  position: fixed;
+  right: 60px;
+  top: 60px;
+  font-size: 2rem;
+  color: #009c7c;
+  transition: all ease 0.3s;
+}
+.close-movie:hover {
+  opacity: 0.6;
+  transition: all ease 0.3s;
+}
+.active-popup {
+  display: flex !important;
 }
