--- a/style.css
+++ b/style.css
@@ -740,7 +740,27 @@ footer .logo {
 
 /* movie-moments */
 
+.movie-moments {
+  width: 100%;
+  max-width: 800px;
+  margin: 0px auto 50px auto;
+}
+
 .movie-moments strong {
   color: #009c7c;
   font-size: 2rem;
+  font-weight: 400;
+}
+
+.moment-s-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  width: 100%;
+}
+
+.moment-s-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
